--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "jest": "^25.4.0",
     "miniprogram-api-typings": "^3.12.2",
     "postcss-comment": "^2.0.0",
+    "regenerator-runtime": "^0.12.1",
     "typescript": "^5.5.3",
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "webpack-env": "^0.8.0"
